Allow dragging for NonClientArea (i.e. DraggableRegions)

The non-client area in ProxyWindow is set through "DraggableRegions",
and this section is used for draggability of the window (see
https://cs.chromium.org/chromium/src/apps/ui/views/app_window_frame_view.cc?sq=package:chromium&g=0&l=196).

The same logic should be introduced on Mash, otherwise frameless
app window can't be dragged.

Bug: 920469
Test: ash_unittests
Change-Id: If249d58dbf0a84aa3b333799f44f122dca04c4e6
Reviewed-on: https://chromium-review.googlesource.com/c/1405458
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622061}